--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ code {
   font-family: var(--main-font);
   color: black;
   padding-top: 0;
-  background-color: white;
+  background-color: #ffffff;
   position: absolute;
   top: 0;
   left: 0;
