--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ code {
   font-family: var(--main-font);
   color: black;
   padding-top: 0;
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   position: absolute;
   top: 0;
   left: 0;
@@ -54,6 +54,10 @@ code {
   text-align: center;
   overflow-y: auto;
   overflow-x: hidden;
+}
+
+.default-container {
+  background: #ffffff;
 }
 
 .default-container-auth {
