Ready to deploy

--- a/src/index.css
+++ b/src/index.css
@@ -57,11 +57,11 @@ code {
 }
 
 .default-container {
-  background: #ffffff;
+  background-color: #ffffff;
 }
 
 .default-container-auth {
-  background: #F5F5F7;
+  background-color: #F5F5F7;
 }
 
 .default-container::-webkit-scrollbar,
