Ready to deploy

--- a/src/index.css
+++ b/src/index.css
@@ -58,10 +58,12 @@ code {
 
 .default-container {
   background-color: #ffffff;
+  background: #ffffff;
 }
 
 .default-container-auth {
   background-color: #F5F5F7;
+  background: #F5F5F7;
 }
 
 .default-container::-webkit-scrollbar,
